--- a/app/src/main/res/layout/message_in.xml
+++ b/app/src/main/res/layout/message_in.xml
@@ -1,10 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:padding="10dp"
     android:background="@drawable/bubble_in">
 
     <TextView
         android:id="@+id/message_user"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -13,6 +16,8 @@
 
     <TextView
         android:id="@+id/message_text"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/message_user"
@@ -24,6 +29,8 @@
 
     <TextView
         android:id="@+id/message_time"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/message_text"
