--- a/app/src/main/res/layout/message_out.xml
+++ b/app/src/main/res/layout/message_out.xml
@@ -10,6 +10,8 @@
 
         <TextView
             android:id="@+id/message_user"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -18,6 +20,8 @@
 
         <TextView
             android:id="@+id/message_text"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/message_user"
@@ -29,6 +33,8 @@
 
         <TextView
             android:id="@+id/message_time"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/message_text"
